--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "test": "test"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   }
