--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "homepage": "https://github.com/KiKiKi-KiKi/mbTrimWidth#readme",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "lint": "eslint \"src/**/*.{js,ts}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{js,ts}\"",
+    "format": "prettier --write \"src/**/*.{js,ts}\""
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.2",
