--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "build:cjs": "tsc --project . --module commonjs --outDir ./dist-cjs",
     "build:esm": "tsc --project . --module esNext --outDir ./dist-esm",
     "build": "npm run build:cjs && npm run build:esm",
-    "test": "jest",
+    "test": "jest --runInBand",
+    "test:w": "jest --runInBand --watch",
+    "test:coverage": "jest test --coverage",
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,ts}\"",
     "format": "prettier --write \"src/**/*.{js,ts}\"",
@@ -39,6 +41,7 @@
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "coveralls": "^3.1.1",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
